change fontawesome and small things...

--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -35,9 +35,9 @@
             />
             <a href="https://www.newgastroline.de" target="_blank">
                 <img class="lazy"
-                     src="<?php echo $this->getSkinUrl('dist/assets/img/30jahre.png') ?>"
-                     alt="30 Jahre New Gastroline GmbH"
-                     title="30 Jahre New Gastroline GmbH"
+                     src="<?php echo $this->getSkinUrl('dist/assets/img/33_years_ng.png') ?>"
+                     alt="33 Jahre New Gastroline GmbH"
+                     title="33 Jahre New Gastroline GmbH"
                      width="80"
                      height="34"
                 />
@@ -293,14 +293,31 @@
         <div class="social">
             <ul>
                 <li>
-                    <a href="https://facebook.com/gastrodax/" target="_blank" rel="nofollow noopener noreferrer" title="<?php echo $this->__('Facebook') ?>"><i
-                            class="fab fa-facebook-square"></i></a></li>
-                <li><a href="https://www.youtube.com/channel/UCTr6z7_W4adeggGR1Sa717g" target="_blank"
-                       rel="nofollow noopener noreferrer" title="<?php echo $this->__('YouTube') ?>"><i class="fab fa-youtube-square"></i></a>
+                    <a href="https://facebook.com/gastrodax/" target="_blank" rel="nofollow noopener noreferrer" title="<?php echo $this->__('Facebook') ?>">
+                        <i class="fa-brands fa-square-facebook"></i>
+                    </a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/gastrodax" target="_blank" rel="nofollow noopener noreferrer" title="<?php echo $this->__('Twitter') ?>"><i
-                            class="fab fa-twitter-square"></i></a></li>
+                    <a href="https://www.youtube.com/channel/UCTr6z7_W4adeggGR1Sa717g" target="_blank"
+                       rel="nofollow noopener noreferrer" title="<?php echo $this->__('YouTube') ?>">
+                        <i class="fa-brands fa-square-youtube"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/gastrodax" target="_blank" rel="nofollow noopener noreferrer" title="<?php echo $this->__('Twitter') ?>">
+                        <i class="fa-brands fa-square-x-twitter"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/gastrodax/" target="_blank" rel="nofollow noopener noreferrer" title="<?php echo $this->__('Instagram') ?>">
+                        <i class="fa-brands fa-square-instagram"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://wa.me/4915259105050" target="_blank" rel="nofollow noopener noreferrer" aria-label="Chat on WhatsApp" mtitle="<?php echo $this->__('Chat on WhatsApp') ?>">
+                        <i class="fa-brands fa-square-whatsapp"></i>
+                    </a>
+                </li>
             </ul>
         </div>
         <div class="copyright">
