--- a/app/design/frontend/foundation/default/template/page/html/header.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/header.phtml
@@ -54,7 +54,7 @@
             <?php echo $this->getChildHtml('topSearch') ?>
         </div>
         <div class="hotline">
-            <a><i class="fas fa-phone"></i> 0800 456 6000 <span>Bestell- und Beratungshotline</span></a>
+            <a class="phone"><i class="fa-solid fa-phone"></i> 0800 456 6000</a>
             <div class="reveal large" id="hotline" data-reveal=""></div>
             <script type="text/javascript">// <![CDATA[
                 jQuery('.hotline a').click(function () {
@@ -70,6 +70,7 @@
                             });
                 });
                 // ]]></script>
+            <a class="whatsapp" target="_blank" aria-label="Chat on WhatsApp" href="https://wa.me/4915259105050"><i class="fa-brands fa-square-whatsapp"></i></a>
         </div>
     </div>
     <div class="header-bottom">
