--- a/skin/frontend/foundation/default/src/assets/scss/custom/_checkout.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_checkout.scss
@@ -180,10 +180,9 @@ ol.opc {
     border-color: $success-color;
 
     &:after {
-      @include fa-icon;
-      @extend .fas;
+      font: var(--fa-font-solid);
+      content: '\f00c';
       padding-left: .5em;
-      content: fa-content($fa-var-check);
     }
 
     .price-notice .price {
