--- a/skin/frontend/foundation/default/src/assets/scss/custom/_header.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_header.scss
@@ -288,31 +288,30 @@ header {
     }
 
     .hotline {
-      @include show-for(large);
-      text-align: center;
-      margin-bottom: .5rem;
-      @include breakpoint(large) {
-        text-align: right;
-        margin-bottom: 0;
-      }
-
-      a {
-        color: $white;
-        font-size: rem-calc(25);
-        font-weight: 600;
-
-        i {
-          font-size: rem-calc(20);
-        }
-
-        span {
-          font-weight: 500;
-          margin-top: -10px;
-          font-size: 0.7rem;
-          display: block;
-          text-transform: uppercase;
-        }
-      }
+        @extend .align-middle;
+        text-align: center;
+          .phone {
+            color: $white;
+            font-size: 1rem;
+              @include breakpoint(large) {
+                  font-size: 1.4rem;
+              }
+            font-weight: 600;
+              &:hover, &:focus {
+                  color: scale-color($white, $lightness: -30%);
+                  transition: background-color 0.25s ease-out, color 0.25s ease-out;
+              }
+          }
+          .whatsapp {
+          i {
+             color: #25d366;
+             font-size: 2rem;
+              &:hover, &:focus {
+                  color: scale-color(#25d366, $lightness: -30%);
+                  transition: background-color 0.25s ease-out, color 0.25s ease-out;
+              }
+          }
+          }
     }
   }
 
