change fontawesome and small things...

--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -314,7 +314,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://wa.me/4915259105050" target="_blank" rel="nofollow noopener noreferrer" aria-label="Chat on WhatsApp" mtitle="<?php echo $this->__('Chat on WhatsApp') ?>">
+                    <a class="whatsapp" href="https://wa.me/4915259105050" target="_blank" rel="nofollow noopener noreferrer" aria-label="Chat on WhatsApp" mtitle="<?php echo $this->__('Chat on WhatsApp') ?>">
                         <i class="fa-brands fa-square-whatsapp"></i>
                     </a>
                 </li>
