change footer links

--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -159,7 +159,7 @@
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/winterhalter')); ?>"><?php echo $this->__('WINTERHALTER') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/vaihinger-sanomat')); ?>"><?php echo $this->__('Sanomat') ?></a>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/eku')); ?>"><?php echo $this->__('EKU Großküchentechnik') ?></a>
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'hersteller/mkn')); ?>"><?php echo $this->__('MKN') ?></a>
