--- a/app/design/frontend/foundation/default/layout/local.xml
+++ b/app/design/frontend/foundation/default/layout/local.xml
@@ -22,7 +22,6 @@
                 <type>skin_css</type>
                 <name>css/magesetup/default.css</name>
             </action>
-            <!--Disable EasyTabs-->
             <action method="removeItem" ifconfig="tm_easytabs/general/enabled">
                 <type>skin_css</type>
                 <name>css/tm/easytabs.css</name>
@@ -34,6 +33,10 @@
             <action method="removeItem">
                 <type>skin_css</type>
                 <name>css/style-newssubscribers.css</name>
+            </action>
+            <action method="removeItem">
+                <type>skin_css</type>
+                <name>css/amasty/ampromo/styles.css</name>
             </action>
             <action method="removeItem">
                 <type>js</type>
@@ -419,6 +422,7 @@
     </contacts_index_index>
 
     <checkout_cart_index>
+
         <reference name="checkout.cart.methods">
             <remove name="checkout.cart.methods.amazonpayments_pay.bottom"/>
             <remove name="checkout.cart.methods.paypal_express.bottom"/>
@@ -434,6 +438,7 @@
                 </action>
             </block>
         </reference>
+
     </checkout_cart_index>
 
     <checkout_onepage_index>
