--- a/app/design/frontend/foundation/default/template/catalog/product/view/addtocart.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/view/addtocart.phtml
@@ -30,7 +30,7 @@
     <li class="bullet-item">
         <div class="add-to-cart">
             <?php if (!$_product->isGrouped()): ?>
-            <label for="qty"><?php echo $this->__('Qty:') ?></label>
+            <label><?php echo $this->__('Qty:') ?></label>
             <?php if ($_product->getStockItem()->getData('qty_increments') >= 1): ?>
             <div class="quantity-step">
                 <?php else: ?>
