--- a/app/design/frontend/foundation/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/list.phtml
@@ -116,7 +116,7 @@ $_helper = $this->helper('catalog/output');
                     <?php } ?>
                     <li class="item">
                         <?php if (date("Y-m-d") >= substr($_product->getNewsFromDate(), 0, 10) && date("Y-m-d") <= substr($_product->getNewsToDate(), 0, 10)) { ?>
-                            <div class="new-ribbon"><span><?php echo $this->__('Neu') ?></div>
+                            <div class="new-ribbon"><span><?php echo $this->__('Neu') ?></span></div>
                         <?php } ?>
                         <?php if ($_product->getFinalPrice() < $_product->getPrice()) { ?>
                             <?php $_savingPercent = 100 - round(($_product->getFinalPrice() / $_product->getPrice()) * 100); ?>
