--- a/skin/frontend/foundation/default/src/assets/scss/custom/_grid.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_grid.scss
@@ -211,14 +211,14 @@ header {
   justify-content: center;
 }
 
-.products-grid, .search-grid, .gift-grid {
+.products-grid, .search-grid {
   @include xy-grid-container($grid-container, 0);
   @include xy-grid;
   @include xy-grid-layout(1, 'li', null, $grid-margin-gutters, margin, top bottom left right);
   justify-content: center;
 }
 
-.trust-grid {
+.trust-grid, .gift-grid {
   @include xy-grid-container($grid-container, 0);
   @include xy-grid;
   @include xy-grid-layout(2, 'li', null, $grid-margin-gutters, margin, top bottom left right);
@@ -728,7 +728,7 @@ footer {
     @include xy-grid-layout(3, 'li');
   }
 
-  .products-grid, .search-grid, .gift-grid {
+  .products-grid, .search-grid {
     @include xy-grid-layout(3, 'li');
 
     .action {
@@ -737,7 +737,7 @@ footer {
     }
   }
 
-  .trust-grid {
+  .trust-grid, .gift-grid {
     @include xy-grid-layout(4, 'li');
   }
 
@@ -1008,16 +1008,11 @@ footer {
     @include xy-grid-layout(3, 'li');
   }
 
-  .products-grid, .search-grid, .gift-grid {
+  .products-grid, .search-grid {
     @include xy-grid-layout(4, 'li');
-
-    .karneval {
-      align-items: center;
-      justify-content: center;
-    }
   }
 
-  .trust-grid {
+  .trust-grid, .gift-grid {
     @include xy-grid-layout(8, 'li');
   }
 
@@ -1069,7 +1064,6 @@ footer {
         .option:not(.rp) {
           @include xy-cell(6);
         }
-
         ul.product-bundle-radio {
           li {
             @include xy-cell(3);
@@ -1212,7 +1206,7 @@ footer {
     @include xy-grid-layout(8, 'li');
   }
 
-  .products-grid, .search-grid, .gift-grid {
+  .products-grid, .search-grid {
     @include xy-grid-container(rem-calc(1920), 0);
     @include xy-grid-layout(8, 'li');
   }
