--- a/app/design/frontend/foundation/default/template/magesetup/contacts/form.phtml
+++ b/app/design/frontend/foundation/default/template/magesetup/contacts/form.phtml
@@ -78,7 +78,7 @@
                     </label>
                 </div>
                 <div class="return-checkbox">
-                    <input id="return-checkbox" type="checkbox" required>
+                    <input id="return-checkbox" name="return-check" type="checkbox" required>
                     <label for="return-checkbox"><?php echo $this->__('Rückruf/Beratung erbeten') ?></label>
                 </div>
                 <div class="comment-field">
@@ -92,7 +92,7 @@
                     </label>
                 </div>
                 <div class="bdsg-checkbox">
-                    <input id="bdsg-checkbox" type="checkbox" required>
+                    <input id="bdsg-checkbox" name="bdsg-check" type="checkbox" required>
                     <label for="bdsg-checkbox"><?php echo $this->__('Ich stimme zu, dass meine Angaben aus dem Kontaktformular zur Beantwortung meiner Anfrage erhoben und verarbeitet werden. Die von Ihnen im Kontaktformular eingegebenen Daten verbleiben bei uns, bis Sie uns zur Löschung auffordern, Ihre Einwilligung zur Speicherung widerrufen oder der Zweck für die Datenspeicherung entfällt (z.B. nach abgeschlossener Bearbeitung Ihrer Anfrage). Hinweis: Sie können Ihre Einwilligung jederzeit für die Zukunft per E-Mail an datenschutz@newgastroline.de widerrufen. Detaillierte Informationen zum Umgang mit Nutzerdaten finden Sie in unserer <a href="%s">Datenschutzerklärung</a>.', Mage::getUrl('datenschutz')) ?></label>
                 </div>
             </div>
