--- a/app/design/frontend/foundation/default/template/magesetup/contacts/form.phtml
+++ b/app/design/frontend/foundation/default/template/magesetup/contacts/form.phtml
@@ -78,7 +78,7 @@
                     </label>
                 </div>
                 <div class="return-checkbox">
-                    <input id="return-checkbox" name="return-check" type="checkbox" required>
+                    <input id="return-checkbox" name="return-check" type="checkbox">
                     <label for="return-checkbox"><?php echo $this->__('Rückruf/Beratung erbeten') ?></label>
                 </div>
                 <div class="comment-field">
